--- a/ScrabbleBot/ScrabbleBot.fsproj
+++ b/ScrabbleBot/ScrabbleBot.fsproj
@@ -26,6 +26,8 @@
     <Compile Include="Parser.fs" />
     <Compile Include="Scrabble.fsi" />
     <Compile Include="Scrabble.fs" />
+    <Compile Include="Dictionary.fsi"/>
+    <Compile Include="Dictionary.fs"/>
   </ItemGroup>
 
   <ItemGroup>
